--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout
-        uses: actions/steup-node@v4
+        uses: actions/checkout@v2.3.4
       - name: Cypress.io
         uses: cypress-io/github-action@v2.9.7
         with:
